# Efficiency

./: .gitignore  README.md  architecture.dia  license.md  proposal.md
source/: BatchedRenderCube.cpp  BatchedRenderCube.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraArcBall.cpp  CameraArcBall.h  Component.h  Debug.cpp  Debug.h  Dimension.cpp  Dimension.h  Game.cpp  Game.h  Makefile  Region.cpp  Region.h  Render.h  RenderCube.cpp  RenderCube.h  RenderQuad.cpp  RenderQuad.h  RenderRect.cpp  RenderRect.h  Script.h  Shader.cpp  Shader.h  Triangle.h  Window.cpp  Window.h  WindowContext.h  batchcube.fs  batchcube.vs  build.sh  creep.fs  cube.fs  default.h  edgeglow.fs  galaxy.fs  inversion.fs  (+9 more)
source/assets/shaders/: hell.fs  inversion2.fs  model.vs  quad.vs  simple.fs  star.fs  starfield.fs  voronoi.fs  warp.fs
source/scripts/: action.lua  block.lua  class.lua  component.lua  entity.lua  item.lua  load-dimension.lua  load-dimension2.lua  load.lua  physics.lua  register.lua  render.lua  update.lua  world.lua
source/src/: Debug.cpp  Game.cpp  Game.h  Input.cpp  Input.h  LuaGame.cpp  LuaGame.h  Ray.cpp  Ray.h  Render.cpp  WindowContext.cpp  default.h  main.cpp  util.c  util.h
source/src/block/: Block.cpp  Block.h  BlockRegistry.cpp  BlockRegistry.h  LuaBlock.cpp  LuaBlock.h  LuaBlockRegistry.cpp  LuaBlockRegistry.h
source/src/camera/: Camera.cpp  Camera.h  CameraArcBall.cpp  CameraArcBall.h  CameraPlayer.cpp  CameraPlayer.h  LuaCamera.cpp  LuaCamera.h
source/src/player/: LuaPlayer.cpp  LuaPlayer.h  Player.cpp  Player.h
source/src/render/: BatchedRenderCube.cpp  BatchedRenderCube.h  LuaBatchedRenderCube.cpp  LuaBatchedRenderCube.h  LuaRenderWorld.cpp  LuaRenderWorld.h  RenderBlock.cpp  RenderBlock.h  RenderCube.cpp  RenderCube.h  RenderQuad.cpp  RenderQuad.h  RenderRect.cpp  RenderRect.h  RenderWorld.cpp  RenderWorld.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.h  Triangle.cpp
source/src/script/: LuaGLM.cpp  LuaGLM.h  LuaScript.cpp  LuaScript.h  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h
source/src/util/: Debug.cpp  Debug.h  Profiler.cpp  Profiler.h  luawrapper.hpp  luawrapperutil.hpp
source/src/world/: Dimension.cpp  Dimension.h  LuaDimension.Cpp  LuaDimension.h  Region.cpp  Region.h
source/test/block/: TestBlock.cpp
source/test/render/: TestTexture.cpp
source/test/util/: TestProfiler.cpp
source/test/world/: TestDimension.cpp  TestRegion.cpp  TestWorld.cpp
